# glossary_db

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 4b76503f988c_initial_tables.py
data/: glossary_filled.csv  glossary_filled_new_terms.csv  glossary_filled_unique_terms.csv  glossary_filled_unique_terms_old.csv  glossary_raw_2.csv  glossary_raw_old.csv  python_glossary.md  sql_glossary.md
docs/: SQLAlchemy_object_lifecycle.md  database_schema_design.md  glossary_filled.csv  glossary_filled_clean.csv  glossary_raw.csv  google_genai_theory.md  main_schemas_module_overview.md  mvp_v1_api.md  orm_theory.md  quick_setup_commands.md  rag_flow_architecture.md  session_tracking_notes.md
docs/diagrams/: conceptual_model.mmd  logical_model.mmd  overview_glossary_db.mmd  physical_model.mmd
docs/glossary_terms/: ai_engineering_glossary.md  big_data_databricks_glossary.md  data_mod_glossary.md  data_modeling_glossary.md  data_visualisation_BI_glossary.md  data_visualization_glossary.md  data_warehouse_glossary.md  dataplatform_dev_glossary.md  llm_ops_glossary.md  machine_learning_glossary.md  python_glossary.md  sql_glossary.md
docs/modules/: architecture_overview.md  database_overview.md  db_migration_alembic.md  (+9 more)
experiments/: rag_poc.py  test_search.py
scripts/: embed_terms.py
src/: config.py  database.py  extract.py  main.py  models.py  rag.py  schemas.py  seed.py  seed_csv.py
tests/: test_api.py
ui/: api.py  ask_tab.py  browse_tab.py  search_tab.py  styles.py
